added swagger endpoints for searching vehicles by make or model
